--- a/src/app/manual-pyp/manual-pyp.component.html
+++ b/src/app/manual-pyp/manual-pyp.component.html
@@ -19,17 +19,17 @@
     <div class="index">
       <ul>
         <li *ngFor="let department of department">
-          <div (click)="toggleProfile(department.ID_Department)">
-            {{ department.Department_Name }}
+          <div (click)="toggleProfile(department.departmentId)">
+            {{ department.departmentName }}
           </div>
     
-          <ul *ngIf="departmentSelected === department.ID_Department">
-            <li *ngFor="let profile of profile" (click)="onProfileSelected(profile.ID_Profile)" class="select">
-              {{ profile.Profile_Name }}
+          <ul *ngIf="departmentSelected === department.departmentId">
+            <li *ngFor="let profile of profile" (click)="onProfileSelected(profile.profileId)" class="select">
+              {{ profile.profileName }}
             </li>
           </ul>
     
-          <div *ngIf="departmentSelected === department.ID_Department && profile.length === 0">
+          <div *ngIf="departmentSelected === department.departmentId && profile.length === 0">
             No hay puestos para este departamento.
           </div>
         </li>
