--- a/src/app/components/manual-list/manual-list.component.html
+++ b/src/app/components/manual-list/manual-list.component.html
@@ -16,7 +16,7 @@
       <button class="manual-button" (click)="goToManualDetail()">Manual de Descriptivos y perfiles de puesto</button>
       <button class="manual-button">Manual de políticas y procedimientos</button>
       <button class="manual-button">Manual de políticas</button>
-      <button class="manual-button"(click)="goToStar()">Volver</button>
+      <button class="manual-button"(click)="goToStart()">Volver</button>
       <!--<button class="manual-button">Manual de Procesos</button>-->
     </div>
     
