--- a/src/app/components/org-list/org-list.component.html
+++ b/src/app/components/org-list/org-list.component.html
@@ -13,11 +13,11 @@
         
         <!-- Lista de organigramas -->
         <div class="manual-list">
-            <button class="manual-button" (click)="goToOrganigrama()">Organigrama Desplegable</button>
-            <button class="manual-button" (click)="goToOrganigramaAuto()">Organigrama Fijo</button>
+            <button class="manual-button" (click)="goToOrganizationChart()">Organigrama Desplegable</button>
+            <button class="manual-button" (click)="goToAuthorizedOrganizationChart()">Organigrama Autorizado</button>
             <button class="manual-button" (click)="goToPrezi1()">Organigrama Prezi 1</button>
             <button class="manual-button" (click)="goToPrezi2()">Organigrama Prezi 2</button>
-            <button class="manual-button" (click)="goToStar()">Volver</button>
+            <button class="manual-button" (click)="goToStart()">Volver</button>
         </div>
     </div>      
 </body>
