--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -55,7 +55,7 @@
         <button class="circular-button">
           <img src="/curriculum-vitae.png" alt="icon" class="display-settings-icon">
         </button>
-        <p class="txtb">Manual de políticas y procedimientos</p>
+        <p class="txtb">Manual de procedimientos</p>
       </div>
     
       <div class="quick-access">
@@ -70,6 +70,13 @@
           <img src="/usuario.png" alt="icon" class="display-settings-icon">
         </button>
         <p class="txtb">Estructura de puestos por departamentos</p>
+      </div>
+
+      <div class="quick-access">
+        <button class="circular-button">
+          <img src="/educacion.png" alt="icon" class="display-settings-icon">
+        </button>
+        <p class="txtb">Cursos de capacitacion</p>
       </div>
     </div>    
   </div>      
