--- a/src/app/components/manual-pyp/manual-pyp.component.html
+++ b/src/app/components/manual-pyp/manual-pyp.component.html
@@ -12,7 +12,7 @@
     <img src="/logo.png" alt="Logo DSD" class="logo" (click)="goHome()">
   
     <!-- Título del manual -->
-    <h1>Manual de Perfiles y descripciones de puesto</h1>
+    <h1>Manual de Descriptivos y perfiles de puesto</h1>
   
     <!-- Índice del manual -->
     <h2>Indice</h2>
