--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -28,7 +28,7 @@
     </div>
     <!--TITULO DE LOS ENLACES MOVIMIENTO RAPIDO-->
     <div class="subtitle-section">
-      <h2>Accesos Rapidos</h2>
+      <h2>Menu de Accesos</h2>
     </div>
     <!--Enlaces para las otras pantallas de organigramas y perfiles-->
     <!-- <div class="quick-access">
@@ -42,6 +42,13 @@
           <img src="/organigrama.png" alt="icon" class="display-settings-icon">
         </button>
         <p class="txtb">Organigrama</p>
+      </div>
+
+      <div class="quick-access">
+        <button class="circular-button" (click)="goToPerfiles()">
+          <img src="/usuario.png" alt="icon" class="display-settings-icon">
+        </button>
+        <p class="txtb">Estructura de puestos por departamentos</p>
       </div>
     
       <div class="quick-access">
@@ -63,13 +70,6 @@
           <img src="/politica.png" alt="icon" class="display-settings-icon">
         </button>
         <p class="txtb">Manual de políticas</p>
-      </div>
-    
-      <div class="quick-access">
-        <button class="circular-button" (click)="goToPerfiles()">
-          <img src="/usuario.png" alt="icon" class="display-settings-icon">
-        </button>
-        <p class="txtb">Estructura de puestos por departamentos</p>
       </div>
 
       <div class="quick-access">
