Feature/Orden-y-Ortografia
Revisión de ortografía del código en la presentación

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,7 +10,7 @@
   <div class="home-container">
     <div class="Cont-mess">
     <!--Titulo de la pagina-->
-      <h1 class="welcome-message">Bienvenido al manual organizacional de DSD</h1>
+      <h1 class="welcome-message">Bienvenido al Manual Organizacional de DSD</h1>
     </div>
     <div class="image-section">
       <!--ZONA DE BOTON QUE TE ENVIA A LA PESTAÑA DE INTRODUCCION-->
@@ -28,7 +28,7 @@
     </div>
     <!--TITULO DE LOS ENLACES MOVIMIENTO RAPIDO-->
     <div class="subtitle-section">
-      <h2>Menu de Accesos</h2>
+      <h2>Menú de Accesos</h2>
     </div>
     <!--Enlaces para las otras pantallas de organigramas y perfiles-->
     <!-- <div class="quick-access">
@@ -48,35 +48,35 @@
         <button class="circular-button" (click)="goToPerfiles()">
           <img src="/usuario.png" alt="icon" class="display-settings-icon">
         </button>
-        <p class="txtb">Estructura de puestos por departamentos</p>
+        <p class="txtb">Estructura de Puestos por Departamentos</p>
       </div>
     
       <div class="quick-access">
         <button class="circular-button" (click)="goToPYP()">
           <img src="/panel-de-control.png" alt="icon" class="display-settings-icon">
         </button>
-        <p class="txtb">Manual de Descriptivos y perfiles de puesto</p>
+        <p class="txtb">Manual de Descriptivos y Perfiles de Puestos</p>
       </div>
     
       <div class="quick-access">
         <button class="circular-button">
           <img src="/curriculum-vitae.png" alt="icon" class="display-settings-icon">
         </button>
-        <p class="txtb">Manual de procedimientos</p>
+        <p class="txtb">Manual de Procedimientos</p>
       </div>
     
       <div class="quick-access">
         <button class="circular-button">
           <img src="/politica.png" alt="icon" class="display-settings-icon">
         </button>
-        <p class="txtb">Manual de políticas</p>
+        <p class="txtb">Manual de Políticas</p>
       </div>
 
       <div class="quick-access">
         <button class="circular-button">
           <img src="/educacion.png" alt="icon" class="display-settings-icon">
         </button>
-        <p class="txtb">Cursos de capacitacion</p>
+        <p class="txtb">Cursos de Capacitación</p>
       </div>
     </div>    
   </div>      
