--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -12,19 +12,18 @@
     <div class="intro-container">
         <!-- Texto representativo (simulación del manual) -->
         <div class="text-content">
-            <h2>Bienvenida al Manual Organizacional</h2>
+            <h2>Bienvenida al Manual Organizacional.</h2>
             <p>
             Le damos la más cordial bienvenida al Manual Organizacional de nuestra empresa, un documento diseñado para ofrecerle una guía clara y estructurada sobre nuestros principios, roles y responsabilidades. Trabajamos con una filosofía basada en la mejora continua, el trabajo en equipo y un profundo compromiso con la calidad y la ética. Este manual es una herramienta esencial para alinear nuestras acciones diarias con los valores que nos definen y asegurar que todos los miembros de nuestro equipo contribuyan al crecimiento sostenible de la empresa. Estamos seguros de que, con pasión por el detalle y un enfoque colaborativo, alcanzaremos juntos nuestras metas.
             </p>
-            <h2>mision:</h2>
+            <h2>Misión:</h2>
             <p>
-            Lograr un crecimiento rentable y sustentable para el desarrollo economico y profesional de todo el grupo que conforma DSD
+            Lograr un crecimiento rentable y sustentable para el desarrollo económico y profesional de todo el grupo que conforma DSD.
             </p>
-            <h2>vision:</h2>
+            <h2>Visión:</h2>
             <p>
-            Queremos ser y ser reconocidos como una campañia en crecimiento, Estamos comprometidos a lograr un desarrollo consiente a largo un desarrollo consistente a largo plazo todo esto sustentando en buenas practicas comerciales y un servicio de calidad total para nuestros clientes
-            </p>
-            <h2>Objetivo del Manual</h2>
+            Queremos ser y ser reconocidos como una compañía en crecimiento, Estamos comprometidos a lograr un desarrollo consistente a largo plazo. Todo esto sustentando en buenas prácticas comerciales y un servicio de calidad total para nuestros clientes.            </p>
+            <h2>Objetivo del Manual:</h2>
             <p>
             Este manual tiene como objetivo unificar y clarificar las descripciones de puesto, políticas, procedimientos y procesos que guían nuestras operaciones diarias. En línea con nuestra misión de lograr un crecimiento rentable y sustentable, y nuestra visión de ser reconocidos por la excelencia en el servicio y las buenas prácticas comerciales, este documento busca garantizar que cada colaborador conozca y aplique los principios fundamentales de la empresa. Al proporcionar esta estructura, facilitamos la toma de decisiones basada en la responsabilidad, la honestidad y la excelencia profesional.
             </p>
