--- a/src/app/components/manual-pyp/manual-pyp.component.html
+++ b/src/app/components/manual-pyp/manual-pyp.component.html
@@ -19,7 +19,9 @@
     <div class="index">
       <ul>
         <li *ngFor="let department of department">
-          <div (click)="toggleProfile(department.departmentId)">
+          <div 
+            (click)="toggleProfile(department.departmentId)"
+            [ngClass]="{'selected-department': departmentSelected === department.departmentId}">
             {{ department.departmentName }}
           </div>
     
