--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -65,12 +65,12 @@
         <p class="txtb">Manual de políticas</p>
       </div>
     
-      <div class="quick-access">
+      <!-- <div class="quick-access">
         <button class="circular-button" (click)="goToPerfiles()">
           <img src="/usuario.png" alt="icon" class="display-settings-icon">
         </button>
         <p class="txtb">Estructura de puestos por departamentos</p>
-      </div>
+      </div> -->
     </div>    
   </div>      
 </body>
