--- a/src/app/components/org-list/org-list.component.html
+++ b/src/app/components/org-list/org-list.component.html
@@ -17,6 +17,7 @@
             <button class="manual-button" (click)="goToAuthorizedOrganizationChart()">Organigrama Autorizado</button>
             <button class="manual-button" (click)="goToPrezi1()">Organigrama Prezi 1</button>
             <button class="manual-button" (click)="goToPrezi2()">Organigrama Prezi 2</button>
+            <button class="manual-button" (click)="goToProfiles()">Matríz de puestos por departamento</button>
             <button class="manual-button" (click)="goToStart()">Volver</button>
         </div>
     </div>      
