--- a/src/app/components/manual-pyp/manual-pyp.component.css
+++ b/src/app/components/manual-pyp/manual-pyp.component.css
@@ -52,18 +52,37 @@ h2 {
   cursor: pointer;
 }
 
-.selected-department {
-  color: white;
-  background-color: blue;
-  padding: 5px;
-  border-radius: 5px;
-}
-
-.select {
+.index_area {
   padding: 5px 40px;
 }
 
-.select:hover{
+.index_area:hover{
+  color:blue;
+  cursor: pointer;
+}
+
+.index_area_level1 {
+  padding: 5px 60px;
+}
+
+.index_area_level1:hover{
+  color:blue;
+}
+
+.index_area_level1N{
+  padding: 5px 60px;
+  font-weight: bold;
+}
+
+.index_area_level1N:hover{
+  color:blue;
+}
+
+.index_area_level2 {
+  padding: 5px 80px;
+}
+
+.index_area_level2:hover{
   color:blue;
 }
 
