style/Cambios de Diseño
Se cambiaron unos nombres y se borraron botones innecesarios

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -44,14 +44,7 @@
         <button class="circular-button" (click)="goToOrganigrama()">
           <img src="/organigrama.png" alt="icon" class="display-settings-icon">
         </button>
-        <p class="txtb">Organigrama</p>
-      </div>
-
-      <div class="quick-access">
-        <button class="circular-button" (click)="goToPerfiles()">
-          <img src="/usuario.png" alt="icon" class="display-settings-icon">
-        </button>
-        <p class="txtb">Estructura de Puestos por Departamentos</p>
+        <p class="txtb">Estructura Organizacional</p>
       </div>
     
       <div class="quick-access">
@@ -72,7 +65,7 @@
         <button class="circular-button">
           <img src="/politica.png" alt="icon" class="display-settings-icon">
         </button>
-        <p class="txtb">Manual de Políticas</p>
+        <p class="txtb">Manual de Políticas y Lineamientos</p>
       </div>
       <div class="quick-access">
         <button class="circular-button">
