--- a/src/app/components/org-list/org-list.component.html
+++ b/src/app/components/org-list/org-list.component.html
@@ -12,13 +12,13 @@
         <img src="/logo.png" alt="Logo DSD" class="logo" (click)="goHome()">
         
         <!-- Lista de organigramas -->
-        <div class="manual-list">
-            <button class="manual-button" (click)="goToOrganizationChart()">Organigrama Desplegable</button>
-            <button class="manual-button" (click)="goToAuthorizedOrganizationChart()">Organigrama Autorizado</button>
-            <button class="manual-button" (click)="goToPrezi1()">Organigrama Prezi 1</button>
-            <button class="manual-button" (click)="goToPrezi2()">Organigrama Prezi 2</button>
-            <button class="manual-button" (click)="goToProfiles()">Matríz de puestos por departamento</button>
-            <button class="manual-button" (click)="goToStart()">Volver</button>
+        <div class="org-list">
+            <button class="org-button" (click)="goToOrganizationChart()">Organigrama Desplegable</button>
+            <button class="org-button" (click)="goToAuthorizedOrganizationChart()">Organigrama Autorizado</button>
+            <button class="org-button" (click)="goToPrezi1()">Organigrama Prezi 1</button>
+            <button class="org-button" (click)="goToPrezi2()">Organigrama Prezi 2</button>
+            <button class="org-button" (click)="goToProfiles()">Matríz de puestos por departamento</button>
+            <button class="org-button" (click)="goToStart()">Volver</button>
         </div>
     </div>      
 </body>
