--- a/src/app/components/org-list/org-list.component.css
+++ b/src/app/components/org-list/org-list.component.css
@@ -16,25 +16,27 @@
     cursor: pointer;
 }
 /*Lista de manuales*/
-.manual-list {
-    margin-top: 60px;
+.org-list {
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     gap: 15px;
-    width: 60%;
+    width: 20%;
+    position: absolute;
+    left: 20px;
 }
 /*botones de la seleccion de manuales*/
-.manual-button {
+.org-button {
     padding: 15px;
     border: none;
     background-color: #e0e0e0;
-    font-size: 18px;
+    font-size: 14px;
     text-align: center;
     width: 100%;
     box-shadow: 0px 0px 5px 0px #333;
 }
   
-.manual-button:hover{
+.org-button:hover{
     cursor: pointer;
     background-color: #aaa;
     box-shadow: 0px 0px 10px 0px #333;
