--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -55,7 +55,7 @@
       </div>
     
       <div class="quick-access">
-        <button class="circular-button">
+        <button class="circular-button" (click)="goToProcedures()">
           <img src="/curriculum-vitae.png" alt="icon" class="display-settings-icon">
         </button>
         <p class="txtb">Manual de Procedimientos</p>
@@ -68,7 +68,7 @@
         <p class="txtb">Manual de Políticas y Lineamientos</p>
       </div>
       <div class="quick-access">
-        <button class="circular-button">
+        <button class="circular-button" (click)="goToInductionCourses()">
           <img src="/educacion.png" alt="icon" class="display-settings-icon">
         </button>
         <p class="txtb">Cursos de Capacitación</p>
