--- a/src/app/components/manual-pyp/manual-pyp.component.html
+++ b/src/app/components/manual-pyp/manual-pyp.component.html
@@ -12,7 +12,7 @@
     <img src="/logo.png" alt="Logo DSD" class="logo" (click)="goHome()">
     
     <!-- Título del manual -->
-    <h1>Manual de Descriptivos y Perfiles de Puesto</h1>
+    <h1 class="center">Manual de Descriptivos y Perfiles de Puesto</h1>
     <h2>Índice</h2>
     <!-- Índice del manual -->
     <div class="index">
