--- a/src/app/components/org-list/org-list.component.html
+++ b/src/app/components/org-list/org-list.component.html
@@ -18,8 +18,10 @@
             <button class="org-button" (click)="goToPrezi1()">Organigrama Prezi 1</button>
             <button class="org-button" (click)="goToPrezi2()">Organigrama Prezi 2</button>
             <button class="org-button" (click)="goToProfiles()">Matríz de puestos por departamento</button>
-            <button class="org-button" (click)="goToStart()">Volver</button>
         </div>
     </div>      
 </body>
+<footer class="button-return">
+    <button class="back-link" (click)="goToStart()">Volver</button>
+</footer>
 </html>
