--- a/src/app/components/mproc-deparment/mproc-deparment.component.html
+++ b/src/app/components/mproc-deparment/mproc-deparment.component.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalle</title>
-    <link rel="stylesheet" href="mproc-profile.component.css">
+    <link rel="stylesheet" href="mproc-deparment.component.css">
 </head>
 <body>
   
