--- a/src/app/components/induction-list/induction-list.component.html
+++ b/src/app/components/induction-list/induction-list.component.html
@@ -12,7 +12,7 @@
         <img src="/logo.png" alt="Logo DSD" class="logo" (click)="goHome()">
     
         <!-- Título del manual -->
-        <h1 class="center">Manual de Procedimientos</h1>
+        <h1 class="center">Cursos de Induccion y Capacitacion</h1>
         <h2>Índice</h2>
         <!-- Índice del manual -->
         <div class="index">
