--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,28 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="login.component.css">
-</head>
-<body>
-    <div class="login-container">
-        <div class="login-box">
-            <img src="/logo.png" alt="Logo DSD" class="logo">
-            <h2>Bienvenido al manual de  Distribuciones A Detalle</h2>
-            <p>Inicie sesión, por favor.</p>
-            <form (ngSubmit)="onSubmit()">
-                <label for="username">Usuario:</label>
-                <input type="text" id="username" [(ngModel)]="username" name="username" required />
-                
-                <label for="password">Contraseña:</label>
-                <input type="password" id="password" [(ngModel)]="password" name="password" required />
-            
-                <button type="submit">Iniciar sesión</button>
-            </form>
-            <!-- <a href="#" class="forgot-password">¿Olvidó su contraseña?</a> -->
+<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+  <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+    <img class="mx-auto h-32 w-auto" ngSrc="/logo.png" alt="Logo DSD" height="4095" width="6000" priority />
+    <h2 class="mt-10 text-center text-2xl/9 font-bold tracking-tight text-gray-900">Bienvenido al manual de Distribuciones a Detalle</h2>
+  </div>
+
+  <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+    <form class="space-y-6" (ngSubmit)="onSubmit()">
+      <div>
+        <label for="username" class="block text-sm/6 font-medium text-gray-900">Nombre de usuario</label>
+        <div class="mt-2">
+          <input [(ngModel)]="username" type="text" name="username" id="username" required
+                 class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
         </div>
-    </div>     
-</body>
-</html>
+      </div>
+
+      <div>
+        <div class="flex items-center justify-between">
+          <label for="password" class="block text-sm/6 font-medium text-gray-900">Contraseña</label>
+          <div class="text-sm">
+            <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Olvidaste tu contraseña?</a>
+          </div>
+        </div>
+        <div class="mt-2">
+          <input [(ngModel)]="password" type="password" name="password" id="password" required
+                 class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
+        </div>
+      </div>
+
+      <div>
+        <button type="submit"
+                class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+          Acceder
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
