--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -23,6 +23,7 @@
         field="label"
         [dropdown]="true"
         placeholder="Buscar perfiles"
+        (onSelect)="onItemSelect($event)"
       >
       </p-autoComplete>
     </div>
