--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,4 +1,3 @@
-/* Contenedor principal */
 .home-container {
   display: flex;
   flex-direction: column;
@@ -11,39 +10,34 @@
   padding: 0px 150px;
 }
 
-/* Contenedor del botón de logout */
 .home-logout {
   position: absolute;
-  top: 20px; /* Distancia desde la parte superior */
-  right: 20px; /* Distancia desde la derecha */
+  top: 20px; 
+  right: 20px;
 }
 
-/* Botón de logout */
 .logout-button {
   padding: 10px 20px;
   font-size: 14px;
   color: white;
-  background-color: #333; /* Color de fondo */
-  border: none; /* Sin borde */
-  border-radius: 4px; /* Bordes redondeados */
-  cursor: pointer; /* Cursor de clic */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Sombra */
-  transition: background-color 0.3s, box-shadow 0.3s; /* Animación */
+  background-color: #333; 
+  border: none; 
+  border-radius: 4px; 
+  cursor: pointer; 
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
+  transition: background-color 0.3s, box-shadow 0.3s; 
 }
 
-/* Efecto hover para el botón */
 .logout-button:hover {
-  background-color: #555; /* Color de fondo al pasar el mouse */
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4); /* Aumenta la sombra */
+  background-color: #555; 
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4); 
 }
 
-/* Mensaje de bienvenida */
 .welcome-message {
   text-align: center;
   margin-bottom: 20px;
 }
 
-/* Sección de imagen */
 .image-section {
   display: flex;
   justify-content: center;  
@@ -54,7 +48,6 @@
   width: 100%;              
 }
 
-/*Boton de la introduccion*/
 .image-button {
   padding: 10px 20px;
   border: none;
@@ -68,19 +61,16 @@
   box-shadow: 0px 0px 10px 0px #555;
 }
 
-/* Imagen principal */
 .main-image {
   width: 200px;           
   height: auto;
 }
 
-/* Contenedor de autocompletado */
 .autocomplete-container {
   max-width: 300px;
   width: 100%;
 }
 
- /*auto acompletar de Buscar*/
 .search{
   margin-right: 20px;
   cursor: pointer;
@@ -91,19 +81,16 @@
   box-shadow: 0px 0px 10px 0px #555;
 }
 
-/* Sección de subtítulo */
 .subtitle-section {
   text-align: center;
   margin-bottom: 20px;
 }
 
-/* Accesos rápidos */
 .quick-access {
   text-align: center;
   margin-bottom: 20px;
 }
 
-/* Botones circulares */
 .circular-buttons {
   display: flex;
   justify-content: center;
