--- a/src/app/components/induction-courses/induction-courses.component.css
+++ b/src/app/components/induction-courses/induction-courses.component.css
@@ -1,37 +1,35 @@
-/*contenedor del pdf en cuestion*/
 .pdf-container {
-    height: 80vh; /* Ocupa la mayor parte de la pantalla */
-    overflow-y: auto;
-    align-items: center;
-    display: block;
-  }
+  height: 80vh;
+  overflow-y: auto;
+  align-items: center;
+  display: block;
+}
   
-  .center{
-    text-align: center;
-  }
+.center{
+  text-align: center;
+}
   
-  /*Botones de accion*/
-  .action-buttons {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 20px;
-  }
+.action-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+}
   
-  .btn {
-    margin: 10px 0;
-    padding: 10px 20px;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    cursor: pointer;
-    box-shadow: 0px 0px 5px 0px #333;
-  }
+.btn {
+  margin: 10px 0;
+  padding: 10px 20px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  box-shadow: 0px 0px 5px 0px #333;
+}
   
-  .btn:hover {
-    background-color: #ddd;
-    box-shadow: 0px 0px 10px 0px #333;
-  }
+.btn:hover {
+  background-color: #ddd;
+  box-shadow: 0px 0px 10px 0px #333;
+}
     
-  .center{
-    text-align: center;
-  }
+.center{
+  text-align: center;
+}
