--- a/src/app/components/intro/intro.component.css
+++ b/src/app/components/intro/intro.component.css
@@ -1,4 +1,3 @@
-/* Contenedor principal */
 .intro-container {
   display: flex;
   justify-content: space-between;
@@ -6,9 +5,8 @@
   padding: 20px;
 }
   
-/* Logo en la parte superior izquierda */
 .logo {
-  width: 100px; /* Ajusta el tamaño del logo */
+  width: 100px;
   position: absolute;
   top: 20px;
   left: 20px;
@@ -18,7 +16,6 @@
   cursor: pointer;
 }
   
-/* Contenido del texto */
 .text-content {
   text-align: justify;
   margin-top: 60px;
@@ -34,7 +31,6 @@
   width: 100%;
 }
 
-/* Enlace "Volver" en la parte inferior izquierda */
 .back-link {
   position: absolute;
   bottom: 20px;
