--- a/src/app/components/perfiles/perfiles.component.html
+++ b/src/app/components/perfiles/perfiles.component.html
@@ -1,25 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DSD Manual</title>
-    <link rel="stylesheet" href="perfiles.component.css">
-</head>
-<body>
+<div class="body">
     <div class="container">
-        <!-- Logo y Combo Box -->
         <div class="header">
             <img src="/logo.png" alt="Logo DSD" class="logo" (click)="goHome()">
-            <select (change)="onDepartamentoChange($event)">
+            <select (change)="onDepartamentChange($event)">
                 <option value="" disabled selected>Seleccione un departamento</option>
                 <option *ngFor="let department of department" [value]="department.departmentId">
-                  {{ department.departmentName }}
+                    {{ department.departmentName }}
                 </option>
             </select>
         </div>
-
-        <!-- Sección de texto para los puestos -->
+    
         <div class="content">
             <h3>Puestos relacionados:</h3>
             <ul>
@@ -28,20 +18,17 @@
                 </li>
             </ul>
         </div>
-
+    
         <div *ngIf="profile.length === 0 && selectedDepartment">
             <p>No hay puestos para este departamento.</p>
         </div>
-
-        <!-- Mostrar el PDF embebido -->
+    
         <div class="pdf-viewer" *ngIf="documentRoute">
             <iframe [src]="documentRoute" width="100%" height="600px"></iframe>
         </div>
-
-        <!-- Botón de volver -->
+    
         <div class="footer">
             <a (click)="goBack()" class="back-link">← Volver</a>
         </div>
     </div>
-</body>
-</html>
+</div>
