--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
         <div class="flex items-center justify-between">
           <label for="password" class="block text-sm/6 font-medium text-gray-900">Contraseña</label>
           <div class="text-sm">
-            <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Olvidaste tu contraseña?</a>
+            <a href="#" class="font-semibold text-sky-600 hover:text-sky-500">Olvidaste tu contraseña?</a>
           </div>
         </div>
         <div class="mt-2">
@@ -29,7 +29,7 @@
 
       <div>
         <button type="submit"
-        class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+        class="flex w-full justify-center rounded-md bg-sky-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-sm hover:bg-sky-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
           Acceder
         </button>
       </div>
