--- a/src/app/components/induction-courses/induction-courses.component.css
+++ b/src/app/components/induction-courses/induction-courses.component.css
@@ -5,17 +5,7 @@
   display: block;
 }
   
-.center{
-  text-align: center;
-}
-  
-.action-buttons {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 20px;
-}
-    
-.center{
-  text-align: center;
+.pdf-center{
+  align-items: center;
+  margin: 0 30px;
 }
