--- a/src/app/components/mproc-profile/mproc-profile.component.css
+++ b/src/app/components/mproc-profile/mproc-profile.component.css
@@ -5,14 +5,8 @@
   display: block;
 }
 
-.center{
-  text-align: center;
-}
-
-.action-buttons {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 20px;
+.pdf-center{
+  align-items: center;
+  margin: 0 30px;
 }
   
