--- a/src/app/components/pyp-profile/pyp-profile.component.css
+++ b/src/app/components/pyp-profile/pyp-profile.component.css
@@ -5,14 +5,9 @@
   display: block;
 }
 
-.center{
-  text-align: center;
+.pdf-center{
+  place-items: center;
+  margin: 0 30px;
 }
 
-.action-buttons {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 20px;
-}
   
