--- a/src/app/components/pyp-profile/pyp-profile.component.html
+++ b/src/app/components/pyp-profile/pyp-profile.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="document">
-  <h3>Documento relacionado con el puesto</h3>
-  <p class="center">
-    <iframe [src]="documentRoute" width="1200" height="800"></iframe>
-  </p>
+  <h3 class="text-center">Documento relacionado con el puesto</h3>
+  <div class="pdf-center">
+    <iframe [src]="documentRoute" width="1200" height="800" class="pdf-container"></iframe>
+  </div>
 </div>
