--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,7 +21,7 @@
         [suggestions]="filteredData"
         (completeMethod)="search($event)"
         field="label"
-        placeholder="Buscar perfiles"
+        placeholder="Buscar Documentos"
         (onSelect)="onItemSelect($event)"
       >
       </p-autoComplete>
