--- a/src/app/components/induction-courses/induction-courses.component.html
+++ b/src/app/components/induction-courses/induction-courses.component.html
@@ -1,7 +1,7 @@
-<div class="container">
-    <div class="pdf-viewer" *ngIf="documentRoute">
-        <div class="pdf-center">
-            <iframe [src]="documentRoute" width="100%" height="800px" class="pdf-container"></iframe>
-        </div>
+<div *ngIf="documentRoute">
+    <h3 class="text-center">Documento relacionado con el curso</h3>
+    <div class="pdf-center">
+      <iframe [src]="documentRoute" width="1200" height="800" class="pdf-container"></iframe>
     </div>
 </div>
+  
