--- a/src/app/components/org-prezi2/org-prezi2.component.html
+++ b/src/app/components/org-prezi2/org-prezi2.component.html
@@ -1,9 +1,9 @@
 <div>
     <img src="/logo.png" alt="Logo DSD" class="logo" (click)="goHome()">
 </div>
-<p class="center">
+<div class="center">
     <iframe src="https://prezi.com/p/embed/dXDenQaRdWYlhiLWqz6Q/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="600" width="1200"></iframe>
-</p>
+</div>
 <footer>
     <a (click)="goBack()" class="back-link">← Volver</a>
 </footer>
